--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
   font-weight: bold;
 }
 
+/* Добавлено для корректного отображения переносов строк в тексте новостей */
+.news-item p {
+  white-space: pre-wrap;
+}
+
 a.download-link {
   display: inline-block;
   margin-top: 15px;
