--- a/style.css
+++ b/style.css
@@ -239,6 +239,13 @@ footer {
   flex-shrink: 0;
   width: 100%;
   box-sizing: border-box;
+  list-style: none; /* отключаем маркеры */
+}
+
+footer p {
+  margin: 0;
+  padding: 0;
+  list-style: none; /* отключаем маркеры */
 }
 
 /* Адаптив */
