--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 nav.side-nav {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Центрируем содержимое по горизонтали */
-  justify-content: flex-start; /* Всё вверху */
+  align-items: center;
+  justify-content: flex-start;
   background-color: #4e2a0a;
   padding: 20px 0 20px 0;
   border-radius: 0 12px 12px 0;
